implemented level and serviceName deleted custom model for pagination
