# jlog-server/src/main/java/com/logging/platform/services/LogService.java
@@ -1,11 +1,11 @@
 package com.logging.platform.services;
 
 import com.logging.platform.mapper.LogApiMapper;
-import com.logging.platform.pagination.Pagination;
 import com.logging.platform.repository.LogEntityRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
-import org.openapi.quarkus.openapi_yaml.model.LogData;
+import org.openapi.quarkus.openapi_yaml.model.LogLevel;
+import org.openapi.quarkus.openapi_yaml.model.PaginationDataLog;
 
 import java.util.Set;
 
@@ -18,11 +18,17 @@ public class LogService {
     @Inject
     private LogEntityRepository logEntityRepository;
 
-    public Pagination<LogData> getLogs(final Set<String> serviceIds, int pageIndex, int pageSize) {
-        final var query = logEntityRepository.find(serviceIds);
+    public PaginationDataLog getLogs(
+            final Set<String> serviceIds,
+            final Set<String> serviceNames,
+            final LogLevel level,
+            final int pageIndex,
+            final int pageSize
+    ) {
+        final var query = logEntityRepository.find(serviceIds, serviceNames, level);
         final var logs = logApiMapper.map(query.page(pageIndex, pageSize).list());
 
-        final var pagination = new Pagination<LogData>();
+        final var pagination = new PaginationDataLog();
 
         pagination.setPageSize(pageSize);
         pagination.setPageIndex(pageIndex);
